# vulkan_renderer

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
assets/: basicmesh.glb
assets/asteroid_media/materials/: asteroid_material_0.mat
assets/planet_media/materials/: planet_Scene_-_Root.mat
crates/engine/: Cargo.toml
crates/engine/crates/asset_database/: Cargo.toml
crates/engine/crates/asset_database/src/: lib.rs
crates/engine/crates/asset_management/asset_database/src/: lib.rs
crates/engine/crates/asset_management/importer/: Cargo.toml
crates/engine/crates/asset_management/importer/src/: lib.rs
crates/engine/crates/asset_management/loader/: Cargo.toml
crates/engine/crates/asset_management/loader/src/: lib.rs
crates/engine/crates/asset_management/shared/src/: lib.rs
crates/engine/crates/importer/: Cargo.toml
crates/engine/crates/importer/src/: lib.rs
crates/engine/crates/information/: Cargo.toml
crates/engine/crates/information/src/: lib.rs
crates/engine/crates/loader/: Cargo.toml
crates/engine/crates/loader/src/: lib.rs
crates/engine/crates/math/: Cargo.toml
crates/engine/crates/math/src/: lib.rs  random.rs
crates/engine/crates/shared/: Cargo.toml
crates/engine/crates/shared/src/: lib.rs
crates/engine/math/: Cargo.toml
crates/engine/src/: engine.rs  lib.rs
crates/engine/src/engine/: events.rs  id.rs
crates/engine/src/engine/ecs/: mod.rs
crates/engine/src/engine/ecs/components/: camera.rs  material.rs  mesh.rs  time.rs  transform.rs
crates/engine/src/engine/ecs/resources/: frame_context.rs  input.rs  mod.rs  render_resources.rs  vulkan_context_resource.rs
crates/engine/src/engine/ecs/resources/render_resources/: audio.rs  buffers_pool.rs  materials_pool.rs  mesh_buffers_pool.rs  physics.rs  samplers_pool.rs  textures_pool.rs
crates/engine/src/engine/ecs/system_params/: asset_loader.rs  mod.rs  physics.rs
crates/engine/src/engine/ecs/systems/: relationships.rs
crates/engine/src/engine/ecs/systems/event_handlers/: mod.rs  on_load_model.rs  on_spawn_model.rs
crates/engine/src/engine/ecs/systems/general/: check_audio_state.rs  mod.rs  physics_tick.rs  propogate_disabled_to_new_children.rs
crates/engine/src/engine/ecs/systems/renderer/: mod.rs
crates/engine/src/engine/ecs/systems/renderer/setup/: prepare_default_samplers.rs  prepare_default_textures.rs  prepare_shaders.rs
crates/engine/src/engine/ecs/systems/renderer/update/: begin_rendering.rs  collect_instance_objects.rs  end_rendering.rs  mod.rs  render_meshes.rs  update_resources.rs
crates/engine/src/engine/general/renderer/descriptors/: descriptor_kinds.rs  descriptor_set_builder.rs  descriptor_set_handle.rs
crates/engine/src/engine/setup/renderer/prepare/: prepare_renderer_resources.rs  prepre_vulkan_context.rs
crates/engine/src/engine/utils/: mod.rs  renderer.rs
crates/game_logic/: Cargo.toml
crates/game_logic/src/: lib.rs
crates/game_runner/: Cargo.toml
crates/game_runner/src/: main.rs
crates/runner/: Cargo.toml
shaders/: gradient.slang  mesh.slang  modules.slang  triangle.slang
shaders/_outputs/: gradient.slang.spv  mesh.slang.spv  triangle.slang.spv
shaders/modules/: resources.slang  structs.slang
shaders/output/: gradient.slang.spv  mesh.slang.spv  triangle.slang.spv
shaders/programs/: gradient.slang  mesh.slang  triangle.slang
src/: engine.rs  main.rs
src/engine/: components.rs  descriptors.rs  events.rs  id.rs  resources.rs  systems.rs  utils.rs
src/engine/components/: camera.rs  material.rs  mesh.rs  time.rs  transform.rs
src/engine/descriptors/: descriptor_kinds.rs  descriptor_layout_builder.rs  descriptor_set_builder.rs  descriptor_set_handle.rs  mod.rs
src/engine/ecs/components/: camera.rs  material.rs  mesh.rs
src/engine/ecs/resources/: render_context.rs  render_resources.rs  vulkan_context_resource.rs
src/engine/ecs/resources/render_resources/: buffers_pool.rs  mesh_buffers_pool.rs  model_loader.rs  samplers_pool.rs  textures_pool.rs
src/engine/ecs/systems/event_handlers/: on_load_model.rs  on_spawn_mesh.rs
src/engine/ecs/systems/general/: mod.rs
src/engine/ecs/systems/renderer/: mod.rs
src/engine/ecs/systems/renderer/setup/: mod.rs  prepare_default_samplers.rs  prepare_default_textures.rs  prepare_descriptors.rs  prepare_shaders.rs  prepare_shders.rs
src/engine/ecs/systems/renderer/update/: begin_rendering.rs  collect_instance_objects.rs  mod.rs  render_meshes.rs  update_resources.rs
src/engine/general/renderer/: mod.rs
src/engine/general/renderer/descriptors/: descriptor_kinds.rs  descriptor_set_builder.rs  descriptor_set_handle.rs
src/engine/resources/: device_properties.rs  frame_context.rs  render_context.rs  render_context_resource.rs  render_resources.rs  vulkan_context_resource.rs
src/engine/resources/render_resources/: allocation.rs  buffers_pool.rs  model_loader.rs  samplers_pool.rs  textures_pool.rs
src/engine/setup/: create_resources.rs  mod.rs
src/engine/setup/create_resources/: create_descriptor_set_builder.rs  create_device_properties.rs  create_renderer_context.rs  create_renderer_resources.rs  create_vulkan_context.rs  mod.rs
src/engine/setup/renderer/prepare/: mod.rs  prepare_renderer_resources.rs
src/engine/systems/: event_handlers.rs  prepare_frame.rs  present.rs  relationships.rs  render.rs  renderer.rs
src/engine/systems/event_handlers/: on_load_model.rs  on_spawn_mesh.rs
src/engine/systems/general/: update_camera.rs  update_time.rs
src/engine/systems/renderer/: begin_rendering.rs  collect_instance_objects.rs  end_rendering.rs  prepare_frame.rs  present.rs  render.rs  render_meshes.rs  update_instance_objects.rs  update_resources.rs  write_instance_objects.rs
src/engine/systems/renderer/update/: collect_instance_objects.rs  end_rendering.rs  mod.rs  prepare_frame.rs  present.rs
src/engine/utils/: renderer.rs  resources.rs  shaders.rs
