[workspace]
resolver = "3"
members = [
    "crates/engine",
    "crates/game_logic",
    "crates/game_runner",
    "crates/engine/crates/math",
]

[workspace.dependencies]
rayon = "1.11.0"
bevy_ecs = { version = "0.18.0", default-features = false, features = [
    "std",
    "backtrace",
    "multi_threaded",
] }
winit = { version = "=0.31.0-beta.2", default-features = false }
engine = { path = "crates/engine" }
game_logic = { path = "crates/game_logic" }
math = { path = "crates/engine/crates/math" }

[profile.dev]
opt-level = 2
debug = 2

[profile.dev.build-override]
opt-level = 2
debug = 0

[profile.dev.package.math]
opt-level = 3

[profile.dev.package."*"]
opt-level = 2
debug = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
