[workspace]
resolver = "3"
members = [
    "crates/engine",
    "crates/game_logic",
    "crates/game_runner",
    "crates/engine/crates/math",
    # "crates/engine/crates/physics",
]

[workspace.dependencies]
rayon = "1.11.0"
bevy_ecs = { version = "0.18.0", default-features = false, features = [
    "std",
    "backtrace",
    "multi_threaded",
] }
winit = { version = "=0.31.0-beta.2", default-features = false }
rapier3d = { version = "0.32.0", features = ["simd-stable", "parallel"] }
engine = { path = "crates/engine" }
game_logic = { path = "crates/game_logic" }
math = { path = "crates/engine/crates/math" }
# physics = { path = "crates/engine/crates/physics" }

[profile.dev]
opt-level = 0
debug = 2

[profile.dev.package.rapier3d]
opt-level = 3
codegen-units = 1

[profile.dev.build-override]
opt-level = 2
debug = 0

[profile.dev.package.math]
opt-level = 3

[profile.dev.package.physics]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
debug = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
