[workspace]
resolver = "3"
members = [
    "crates/engine",
    "crates/game_logic",
    "crates/game_runner",
    "crates/engine/crates/math",
    "crates/engine/crates/importer",
    "crates/engine/crates/loader",
    # "crates/engine/crates/physics",
]

[workspace.dependencies]
rayon = "1.11.0"
bevy_ecs = { version = "0.18.1", default-features = false, features = [
    "std",
    "backtrace",
    "multi_threaded",
] }
winit = { version = "=0.31.0-beta.2", default-features = false }
rapier3d = { version = "0.32.0", features = ["simd-stable", "parallel"] }
asset-importer = { version = "0.7.0", default-features = false, features = [
    "bytemuck",
    "glam",
    "build-assimp",
] }
walkdir = "2.5"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.4"
rkyv = { version = "0.8.15", features = ["uuid-1"] }
uuid = { version = "1.21.0", features = [
    "fast-rng",
    "v4",
    "serde",
    "v5",
    "macro-diagnostics",
] }
uuid-simd = { version = "0.8", default-features = false, features = ["std"] }
meshopt = "0.6.2"
image = { version = "0.25.9", default-features = false, features = [
    "png",
    "jpeg",
    "hdr",
    "rayon",
] }
ktx2-rw = "0.2.4"
fast_image_resize = { version = "6.0.0", features = ["rayon", "image"] }
padding-struct = "0.2.0"
bytemuck = "1.25.0"
num_cpus = "1.17.0"

engine = { path = "crates/engine" }
game_logic = { path = "crates/game_logic" }
math = { path = "crates/engine/crates/math" }
importer = { path = "crates/engine/crates/importer" }
loader = { path = "crates/engine/crates/loader" }
# physics = { path = "crates/engine/crates/physics" }

[profile.dev]
opt-level = 0
debug = 2

[profile.dev.package.rapier3d]
opt-level = 3
codegen-units = 1

[profile.dev.build-override]
opt-level = 2
debug = 0

[profile.dev.package.math]
opt-level = 3

[profile.dev.package.physics]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
debug = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
