[package]
name = "engine"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
rayon = { workspace = true }
bevy_ecs = { workspace = true }
glam = { workspace = true }
raw-window-handle = "0.6.2"
winit = { version = "=0.31.0-beta.2", default-features = false }
vulkanite = { git = "https://github.com/Jerrody/vulkanite", features = [
    "version_1_4",
    "loaded",
    "ext_unified_image_layouts",
    "ext_descriptor_buffer",
    "raw-window-handle",
    "ext_swapchain",
    "ext_shader_object",
    "ext_debug_utils",
    "ext_mesh_shader",
    "ext_validation_features",
] }
vma = { package = "vk-mem", git = "https://github.com/Jerrody/vulkanite-mem-rs", branch = "vulkanite" }
asset-importer = { version = "0.7.0", default-features = false, features = [
    "bytemuck",
    "glam",
    "build-assimp",
] }
bytemuck = "1.25.0"
meshopt = "0.6.2"
ahash = "0.8.12"
image = { version = "0.25.9", default-features = false, features = [
    "png",
    "jpeg",
    "hdr",
    "rayon",
] }
ktx2-rw = "0.2.4"
nameof = "1.3.0"
dolly = "0.6.0"
fast_image_resize = { version = "6.0.0", features = ["rayon", "image"] }
num_cpus = "1.17.0"
padding-struct = "0.2.0"
slotmap = { git = "https://github.com/Jerrody/slotmap" }
