[package]
name = "engine"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
rayon = { workspace = true }
bevy_ecs = { workspace = true }
winit = { workspace = true }
math = { workspace = true }
importer = { workspace = true }
loader = { workspace = true }
shared = { workspace = true }
rapier3d = { workspace = true }
asset-importer = { workspace = true }
image = { workspace = true }
ktx2-rw = { workspace = true }
fast_image_resize = { workspace = true }
meshopt = { workspace = true }
padding-struct = { workspace = true }
bytemuck = { workspace = true }
num_cpus = { workspace = true }
slotmap = { workspace = true }

raw-window-handle = "0.6.2"
vulkanite = { git = "https://github.com/Jerrody/vulkanite", features = [
    "version_1_4",
    "loaded",
    "ext_unified_image_layouts",
    "ext_descriptor_buffer",
    "raw-window-handle",
    "ext_swapchain",
    "ext_shader_object",
    "ext_debug_utils",
    "ext_mesh_shader",
    "ext_validation_features",
] }
vma = { package = "vk-mem", git = "https://github.com/Jerrody/vulkanite-mem-rs", branch = "vulkanite" }
ahash = "0.8.12"
nameof = "1.3.0"
dolly = "0.6.0"
kira = "0.12.0"
