[package]
name = "game_runner"
version = "0.1.0"
edition = "2024"
build = "../../build.rs"

[dependencies]
engine = { workspace = true }
game_logic = { workspace = true }
winit = { version = "=0.31.0-beta.2", default-features = false }
libloading = "0.9.0"

[build-dependencies]
cargo_metadata = "0.23.1"
